# PSiO-labolatoria

L1/L1_z1/: L1_z1  Makefile  main.cpp
L1/L1_z2/: main.cpp
L1/L1_z3/: Makefile  Makefile.Debug  Makefile.Release  main.cpp
L1/L1_z4/: Makefile  Makefile.Debug  Makefile.Release  main.cpp
L1/L1_z5/: Makefile  Makefile.Debug  Makefile.Release  main.cpp
L1/L1_z6/: Makefile  Makefile.Debug  Makefile.Release  main.cpp
L1/L1_z7/: Makefile  Makefile.Debug  main.cpp  (+1 more)
L8/sfml-klasy/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main.cpp
L8/sfml-klasy/.cmake/api/v1/reply/: cache-v2-39206dbbd6d8ff78ba80.json  cmakeFiles-v1-3164387c0c6839d2c9d4.json  cmakeFiles-v1-4a3cb9326c22c3ce8fcd.json  codemodel-v2-68b729e55c9e5da67a4d.json  index-2021-05-27T15-43-50-0879.json  index-2021-06-04T15-27-35-0752.json  target-sfml-klasy-Debug-38efca8379635bf87840.json
L9/Lab9/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main.cpp
L9/Lab9/.cmake/api/v1/reply/: cache-v2-0ba5fe840db09f84471f.json  cmakeFiles-v1-27f7f77b811161e559da.json  codemodel-v2-17221045699a5cc0135d.json  index-2021-06-04T15-30-45-0502.json  target-Lab9-Debug-15e4cbd4f7f0f2086fe1.json
kolokwium/kolokwium/: CMakeCache.txt  CMakeLists.txt  LICENSE  cmake_install.cmake  main.cpp
kolokwium/kolokwium/.cmake/api/v1/reply/: cache-v2-5badc208a468b57c86df.json  cmakeFiles-v1-8de24a347baa570e0b36.json  cmakeFiles-v1-c57878ec0eb3547989a7.json  codemodel-v2-9cc92fef285308b906d5.json  codemodel-v2-b2ae560ed1b2d2d7b03f.json  index-2021-06-11T07-08-34-0161.json  index-2021-06-30T08-38-23-0345.json  target-kolokwium-Debug-2abec4ec0d4f9c318846.json  target-kolokwium-Debug-aaa4877edca2babc0570.json
(+88 files in other folders)
